Fix bug rendering filtered panel catalogs

--- a/alexandria/activity-elements-activity/src/widgets/alexandria-panel-catalog-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-panel-catalog-view.html
@@ -19,6 +19,12 @@
     </template>
 
     <style>
+        :host ::content alexandria-catalog ::content .main,
+        :host ::content alexandria-temporal-range-catalog ::content .main,
+        :host ::content alexandria-temporal-time-catalog ::content .main {
+            padding-top: 8px;
+            border: 0 !important;
+        }
     </style>
 
     <script>
