Refactored defaultPicture to String type

--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
@@ -346,6 +346,7 @@
         _parseFunctions : function(value) {
             value = this._parseDates(value);
             value = this._parsePercentages(value);
+            value = this._parseNumbers(value);
             return value;
         },
 
@@ -367,6 +368,20 @@
 
         _parsePercentages : function(value) {
             var regExp = new RegExp(/percentage\('([^']*)',([^\)]*)\)/);
+            var match = regExp.exec(value);
+            if (match == null) return value;
+
+            while (match != null) {
+                var formatted = numeral(parseFloat(match[1])).format(match[2]);
+                value = value.replace(match[0], formatted);
+                match = regExp.exec(value);
+            }
+
+            return value;
+        },
+
+        _parseNumbers : function(value) {
+            var regExp = new RegExp(/number\('([^']*)','([^']*)'\)/);
             var match = regExp.exec(value);
             if (match == null) return value;
 
