--- a/alexandria/activity-elements-activity/src/widgets/alexandria-panel.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-panel.html
@@ -22,10 +22,10 @@
         <cotton-breadcrumbs items="[[_breadcrumbs]]" on-item-selected="_navigate" hidden$="[[!_breadcrumbs.length]]"></cotton-breadcrumbs>
         <div id="main" class="layout vertical flex" style="height:100%;">
             <div class$="tabs tabs_[[_showTabs]]">
-                <paper-tabs selected="{{_selectedView}}" no-bar hidden="[[!_showTabs]]">
+                <paper-tabs selected="{{_selectedView}}" no-bar hidden="[[!_showTabs]]" attr-for-selected="name">
                     <template is="dom-repeat" items="[[_viewList]]" as="view">
                         <template is="dom-if" if="[[_isTabLayoutView(view)]]">
-                            <paper-tab view="[[view]]">[[view.label]]</paper-tab>
+                            <paper-tab name$="[[view.name]]" view="[[view]]">[[view.label]]</paper-tab>
                         </template>
                     </template>
                 </paper-tabs>
@@ -45,17 +45,17 @@
                     </template>
                 </template>
             </div>
-            <iron-pages id="tabs-content" class$="flex left_fixed_[[_hasLeftFixedViews]] right_fixed_[[_hasRightFixedViews]]" selected="{{_selectedView}}">
+            <iron-pages id="tabs-content" class$="flex left_fixed_[[_hasLeftFixedViews]] right_fixed_[[_hasRightFixedViews]]" selected="{{_selectedView}}" attr-for-selected="name">
                 <template is="dom-repeat" items="[[_viewList]]" as="view">
                     <template is="dom-if" if="[[_isTabLayoutView(view)]]">
                         <template is="dom-if" if="[[_isCustomView(view)]]">
-                            <cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            <div name$="[[view.name]]"><cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[_target]][[view.name]]"></cotton-zombie></div>
                         </template>
                         <template is="dom-if" if="[[_isCatalogView(view)]]">
-                            <cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            <div name$="[[view.name]]"><cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[_target]][[view.name]]"></cotton-zombie></div>
                         </template>
                         <template is="dom-if" if="[[_isDisplayView(view)]]">
-                            <cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            <div name$="[[view.name]]"><cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[_target]][[view.name]]"></cotton-zombie></div>
                         </template>
                     </template>
                 </template>
@@ -181,7 +181,7 @@
 
         Polymer({
             is: 'alexandria-panel',
-            lastViewIndex: null,
+            lastView: null,
 
             behaviors: [ CottonBehaviors.CarrierBehavior,
                 CottonBehaviors.PushBehavior,
@@ -195,7 +195,7 @@
                 _target: { type: String, value: function() { return ""; }},
                 _viewList : Array,
                 _showTabs : Boolean,
-                _selectedView : { type: Number, value: function() { return 0; }, observer: '_selectView' },
+                _selectedView : { type: String, value: function() { return null; }, observer: '_selectView' },
                 _selectedPage : { type: Number, value: function () { return 0; } },
                 _hasLeftFixedViews : { type: Boolean, value: function() { return false; }},
                 _hasRightFixedViews : { type: Boolean, value: function() { return false; }}
@@ -215,6 +215,11 @@
                 this._showTabs = viewList.length > 1;
                 this._hasLeftFixedViews = this._countLeftFixedViews() > 0;
                 this._hasRightFixedViews = this._countRightFixedViews() > 0;
+            },
+
+            _refreshSelectedView : function(name) {
+                if (this._selectedView == name) return;
+                this._selectedView = name;
             },
 
             _countLeftFixedViews : function() {
@@ -255,11 +260,11 @@
                 return view.referencePropertyList[1].value == "right-fixed";
             },
 
-            _selectView : function(pos) {
-                var element = this.querySelector("paper-tabs").items[pos];
+            _selectView : function(name) {
+                var element = this.querySelector("paper-tab[name=" + name + "]");
                 if (element == null) return;
-                if (this.lastViewIndex == pos) return;
-                this.lastViewIndex = pos;
+                if (this.lastView == name) return;
+                this.lastView = name;
                 this.selectView(element.view.name);
             }
 
