--- a/alexandria/activity-elements-activity/src/widgets/alexandria-tab-layout.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-tab-layout.html
@@ -20,7 +20,8 @@
     <template>
         <cotton-layout id="layout" title="[[_title]]" subtitle="[[_subtitle]]" logo="[[_logo]]"
                        tabs="[[_itemTabList]]" selected-tab="{{_selectedItem}}"
-                       on-select-tab="_selectItem" on-logout="_logout" on-edit-profile="_editProfile">
+                       on-select-tab="_selectItem" on-logout="_logout" on-edit-profile="_editProfile"
+                       on-home="showHome">
 
             <div id="user-content">
                 <content select="#header-content"></content>
